# Python-build-framework

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  utilities.py
.github/workflows/: main.yml  precommit.yml
test/: test_utilities.py
