[tool.poetry]
name = "oid-test"
version = "0.1.0"
description = "A test project"
authors = ["truden-dev <torgeirar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.0"
python-dotenv = "^1.0.1"
pylint = "^3.1.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.3.0"
mypy = "^1.9.0"
autoflake = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
