[tool.poetry]
name = "oid-test"
version = "0.1.0"
description = "A test project"
authors = ["truden-dev <torgeirar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.0"
python-dotenv = "^1.0.1"
pylint = "^3.1.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.3.0"
mypy = "^1.9.0"
autoflake = "^2.3.1"
commitizen = "^3.21.3"
pytest = "^8.1.1"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
